# Expression_Evaluator

./: CMakeLists.txt  README.md  data_structures.c  data_structures.h  exp_eval.c  exp_eval.h  expression_evaluator.c  input.txt  mymath.c  mymath.h  stdafx.h
